First round cleanup and refactor

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ leaflet
 tnclogs
 *.pyc
 *.pyo
-
+.idea
 
 
 # Windows image file caches
@@ -37,7 +37,8 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must ends with two \r.
-Icon
+Icon
+
 
 # Thumbnails
 ._*
